--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
   <center>
     <a href="https://github.com/luana2813?tab=repositories" target="_blank"> 
-      <img src="images/gatinho_fofo.jpeg" alt="foto de um gatinho_fofo">
+      <img src="images/mulherSorrindo.jpg" alt="foto de um gatinho_fofo">
     </a>
   </center>
+
+  <p style="text-align: center;">Contato: luanadez13@gmail.com</p>
+
 </body>
 
 </html>
