--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1 style="text-align: center;">Bem vindo a minha pagina</h1>
 
-  <p style="text-align: center;">Ola, meu nome eh Luana Correia, eu sou aluna da Udemy </p>
+  <p style="text-align: center;">Ola, meu nome é Luana Correia, eu sou aluna da Udemy </p>
 
   <center>
     <a href="https://github.com/luana2813?tab=repositories" target="_blank"> 
