--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <meta http-equiv="Content Type" content="text/html" ; charset="utf-8">
 
 <body>
-  <h1 style="text-align: center;">Bem vindo a minha pagina</h1>
+  <h1 style="text-align: center;">Welcome to my page</h1>
 
-  <p style="text-align: center;">Ola, meu nome é Luana Correia, eu sou aluna da Udemy </p>
+  <p style="text-align: center;">Hi, my name is Luana Correia and I'm a fullstack developer</p>
 
   <center>
-    <a href="https://github.com/luana2813?tab=repositories" target="_blank"> 
-      <img src="images/mulherSorrindo.jpg" alt="foto de um gatinho_fofo">
-    </a>
+    <p><a href="https://github.com/luacooli?tab=repositories" target="_blank"> Click here </a> to see my code playground, hopeyou enjoy it!</p>
   </center>
 
-  <p style="text-align: center;">Contato: luanadez13@gmail.com</p>
+  <p style="text-align: center;">Contact: luanadez13@gmail.com</p>
 
 </body>
 
