--- a/index.html
+++ b/index.html
@@ -3,15 +3,47 @@
 <meta http-equiv="Content Type" content="text/html" ; charset="utf-8">
 
 <body>
-  <h1 style="text-align: center;">Welcome to my page</h1>
+  <h1 style="text-align: center;">Welcome to my page 👋🏽</h1>
 
-  <p style="text-align: center;">Hi, my name is Luana Correia and I'm a fullstack developer</p>
+  <section>
+    <h2>About me 🙃</h2>
 
-  <center>
-    <p><a href="https://github.com/luacooli?tab=repositories" target="_blank"> Click here </a> to see my code playground, hopeyou enjoy it!</p>
-  </center>
+    <p>Hi, my name is Luana Correia and I'm a fullstack developer</p>
+    <p>While I'm not coding sometimes I'm playing soccer ⚽ or volleyball 🏐 or even doing some workouts to keep my shape. When I'm on the mood I like to play ukulele 🎸 songs and sing like I'm in the shower 🎙️. And between this all events I'm cuddling with my cat 😽</p>
+  </section>
 
-  <p style="text-align: center;">Contact: luanadez13@gmail.com</p>
+  <section>
+    <h2>Currently</h2>
+
+    <h3>woring on...</h3>
+    <ul>
+      <li>porfifólio</li>
+      <li>currículo</li>
+    </ul>
+
+    <h3>learning</h3>
+    <ul>
+      <li>react</li>
+      <li>node.js</li>
+      <li>typescript</li>
+    </ul>
+
+    <h3>reading</h3>
+    <ul>
+      <li>Drogas: a história do proibicionismo</li>
+      <li>Sapiens: os pilares da civilização</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Links</h2>
+
+    <a href="https://www.linkedin.com/in/lua-correia"/>LinkedIn</a>
+    <a href="https://github.com/luacooli?tab=repositories"/>Github</a>
+    
+    <p>Contact me by: luacooli@gmail.com</p>
+  </section>
+
 
 </body>
 
