chore: update my info

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <h2 class="text-2xl text-stone-400 font-bold my-3">
-          Full-Stack Developer
+          Front-End Developer
         </h2>
       </header>
 
@@ -32,53 +32,78 @@
           <h2 class="text-xl text-gray-500 font-semibold">About me...</h2>
 
           <p class="text-base my-3">
-            Hi, my name is Luana Correia and I'm a Full-Stack developer
+            Hi, my name is Luana Correia and I'm a Front-End developer with some
+            skills on the Back-End
           </p>
 
           <p class="text-base">
-            When I'm not coding, you might find me on the soccer field ⚽ or
-            volleyball court 🏐, or squeezing in a workout to stay fit.
-            Occasionally, I enjoy strumming some tunes on my ukulele 🎸 and
-            belting out songs as if I'm in the shower 🎙️. And amidst all these
-            activities, you'll often catch me cuddling with my cat 😽.
+            I'm a Front-End Developer with over four years of experience
+            building scalable, high-performance applications using Vue.js,
+            React.js, and modern web technologies. Passionate about delivering
+            exceptional user experiences, I specialize in creating intuitive,
+            responsive, and visually appealing applications. When I'm not
+            coding, I enjoy playing soccer ⚽, practicing music 🎸, and spending
+            time with my cat 😽.
           </p>
         </article>
       </section>
 
-      <section class="grid divide-y">
+      <section class="grid place-content-center divide-y w-full">
         <h2 class="text-2xl text-gray-500 font-bold p-2">Currently</h2>
 
-        <article class="py-3">
+        <article class="max-w-4xl py-3">
           <h3 class="text-l text-stone-400 font-semibold my-2">
             👩🏽‍💻 Woring on...
           </h3>
           <ul class="list-disc">
-            <li class="ml-6 text-sm">Build my portfolio</li>
-            <li class="ml-6 text-sm">Finishing a node course from udemy</li>
-            <li class="ml-6 text-sm">Looking for a react one from udemy too</li>
+            <li class="ml-6 text-sm">Enhancing my portfolio</li>
+            <li class="ml-6 text-sm">Finishing a Flutter course from udemy</li>
             <li class="ml-6 text-sm">Improving my Vue.js skills</li>
           </ul>
         </article>
 
-        <article class="py-3">
+        <article class="max-w-4xl py-3">
           <h3 class="text-l text-stone-400 font-semibold my-2">
             🧠 Learning/diving further into...
           </h3>
           <ul class="list-disc">
-            <li class="ml-6 text-sm">React</li>
-            <li class="ml-6 text-sm">Typescript</li>
             <li class="ml-6 text-sm">Flutter</li>
-            <li class="ml-6 text-sm">Cypress tests</li>
+            <li class="ml-6 text-sm">Typescript</li>
+            <li class="ml-6 text-sm">Unit tests</li>
           </ul>
         </article>
 
-        <article>
+        <article class="max-w-4xl">
           <h3 class="text-l text-stone-400 font-semibold my-2">📖 Reading</h3>
           <ul class="list-disc">
             <li class="ml-6 text-sm">The Secret</li>
-            <li class="ml-6 text-sm">TAO - Lao Tzu</li>
-            <li class="ml-6 text-sm">Sapiens: os pilares da civilização</li>
+            <li class="ml-6 text-sm">Hippie</li>
+            <li class="ml-6 text-sm">Trilhas sonoras da mente</li>
           </ul>
+        </article>
+
+        <article class="max-w-4xl">
+          <h3 class="text-l text-stone-400 font-semibold my-2">🧩 Skills</h3>
+          <div class="flex">
+            <ul class="list-disc">
+              <li class="ml-6 text-sm">Vue.js</li>
+              <li class="ml-6 text-sm">Nuxt.js</li>
+              <li class="ml-6 text-sm">React.js</li>
+              <li class="ml-6 text-sm">TypeScript</li>
+              <li class="ml-6 text-sm">Firebase</li>
+              <li class="ml-6 text-sm">Tailwind CSS</li>
+              <li class="ml-6 text-sm">Cypress</li>
+              <li class="ml-6 text-sm">REST APIs</li>
+            </ul>
+            <ul class="list-disc ml-6">
+              <li class="ml-6 text-sm">Git</li>
+              <li class="ml-6 text-sm">AWS</li>
+              <li class="ml-6 text-sm">Azure</li>
+              <li class="ml-6 text-sm">GCP</li>
+              <li class="ml-6 text-sm">CI/CD</li>
+              <li class="ml-6 text-sm">DevOps</li>
+            </ul>
+          </div>
         </article>
       </section>
 
@@ -115,7 +140,7 @@
           </div>
 
           <p>
-            contact me via:
+            Let's connect! Feel free to reach out for collaborations, projects, or just to chat about frontend development
             <a href="mailto:luacooli@gmail.com">luacooli@gmail.com</a>
           </p>
         </article>
